--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -57,6 +57,14 @@ jobs:
         retain_days: 1
         keep_minimum_runs: 3
 
+    - name: Remove old Releases
+      uses: dev-drprasad/delete-older-releases@v0.2.0
+      with:
+        keep_latest: 4
+        delete_tags: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Source Code Update notification
       if: steps.cacheHash.outputs.cache-hit != 'true'
       run: |
