--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -55,3 +55,9 @@ jobs:
       if: steps.cacheHash.outputs.cache-hit != 'true'
       run: |
         curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}lede源码更新了" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
+
+    - name: Delete workflow runs
+      uses: GitRML/delete-workflow-runs@main
+      with:
+        retain_days: 1
+        keep_minimum_runs: 1
